/*
Copyright 2019 The Alcor Authors.

Licensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

        Unless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.
*/

syntax = "proto3";

package alcorcontroller;

option java_package = "com.futurewei.alcor.controller.schema";
option java_outer_classname = "Port";

import "common.proto";

message PortConfiguration {
    int32 version = 1;

    string project_id = 2;
    string network_id = 3;
    string id = 4;
    string name = 5;
    string network_ns = 6;
    string mac_address = 7;
    string veth_name = 8;

    message HostInfo {
        string ip_address = 1;
        string mac_address = 2;
    }

    message FixedIp {
        string subnet_id = 1;
        string ip_address = 2;
    }

    message SecurityGroupId {
        string id = 1;
    }

    message AllowAddressPair {
        string ip_address = 1;
        string mac_address = 2;
    }

    message ExtraDhcpOption {
        string name = 1;
        string value = 2;
    }

    HostInfo host_info = 9;
    repeated FixedIp fixed_ips = 10;
    repeated SecurityGroupId security_group_ids = 11;
    repeated AllowAddressPair allow_address_pairs = 12;
    repeated ExtraDhcpOption extra_dhcp_options = 13;
}

message PortState {
    OperationType operation_type = 1;
    PortConfiguration configuration = 2;
}
